# p2p-chat

./: .gitignore  Agent.md  BuildProgress.md  GapChecklist.md  NextSession.md  Project.md  README.md  build_apk  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: current-version-status.md
scripts/: build-android-apk.sh  collect-linux-release.mjs  generate-android-keystore.sh  install-android-build-deps.sh  prepare-release.mjs  version-sync.mjs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/app/: auth_access.rs  bootstrap.rs  chat_mutations.rs  chat_queries.rs  mod.rs  shell_auth.rs  transport_mutations.rs  transport_queries.rs
src-tauri/src/commands/: bootstrap.rs  chat.rs  mod.rs  shell_state.rs  transport.rs
src-tauri/src/domain/: bootstrap.rs  chat.rs  chat_repository.rs  mod.rs  transport.rs  transport_adapter.rs  transport_engine.rs  transport_repository.rs  transport_runtime.rs  transport_runtime_manager.rs  transport_runtime_registry.rs
src-tauri/src/infra/: auth_runtime_binding_store.rs  auth_runtime_client_store.rs  auth_runtime_credential_store.rs  auth_runtime_state_store.rs  local_command_transport_runtime_launcher.rs  local_transport_recovery_worker.rs  local_transport_runtime_adapter.rs  local_transport_runtime_manager.rs  local_transport_service.rs  media_store.rs  media_upload.rs  mock_transport_adapters.rs  mock_transport_engine.rs  mock_transport_runtime.rs  mod.rs  pending_auth_runtime_client_store.rs  preview_transport_engine.rs  preview_transport_runtime.rs  seed_chat_repository.rs  shell_state_store.rs  sqlite_chat_repository.rs  sqlite_connection.rs  sqlite_transport_repository.rs  transport_engine_factory.rs  transport_runtime_builder.rs  transport_runtime_factory.rs  transport_runtime_manager_factory.rs  transport_state_builder.rs
src/components/: ArchivedChatsPage.vue  ChatPane.vue  CircleDetailPage.vue  CircleDirectoryPage.vue  CircleInvitePage.vue  CircleSwitcher.vue  ContactProfilePage.vue  ConversationDetailsDrawer.vue  FindPeoplePage.vue  GroupCreationPage.vue  GroupMembersManagePage.vue  GroupMembersPage.vue  GroupNamePage.vue  GroupProfilePage.vue  HomeTopBar.vue  LaunchScreen.vue  LoginScreen.vue  MessageDetailPage.vue  NewMessagePage.vue  OverlayPageShell.vue  SelectGroupMembersPage.vue  SelfChatConfirmPage.vue  (+4 more)
(+18 files in other folders)
