[package]
name = "p2p_chat"
version = "0.1.0"
description = "P2P Chat desktop rebuild powered by Tauri."
authors = ["P2P Chat Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "p2p_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "p2p-chat-runtime"
path = "src/bin/p2p-chat-runtime.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
